Upgraded sprint and hibernate version